--- a/UI/Web/src/theme/themes/dark.scss
+++ b/UI/Web/src/theme/themes/dark.scss
@@ -82,7 +82,7 @@
     --theme-color: #000000;
     --color-scheme: dark;
     --tile-color: var(--primary-color);
-    --nav-offset: 70px;
+    --nav-offset: 60px;
     --nav-mobile-offset: 55px;
 
     /* Setting Item */
